[package]
name = "rust-game-test"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Engine
bevy = {version = "0.14.2",features = ["jpeg", "png", "ktx2", "mp3"]}
bevy-inspector-egui = "0.26.0"
bevy_mod_picking = "0.20.1"
bevy_third_person_camera = "0.1.13"
wgpu = "22.1.0"
wgpu-hal = "^22.0.0"

# Utils
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }